Fixed the error reported in the instructions